# bookstore

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION_PLAN.md  README.md  app.js  cart.go  database.go  go.mod  go.sum  handlers.go  helpers.go  index.html  main.go  main_test.go  models.go  server.go  store.go  styles.css  templates.go
.cargo/: config.toml
db/: schema.sql
docs/: EXTERNAL_WORLD_BOOTSTRAP_SPEC.md  IMPLEMENTATION_SEQUENCE.md  INFRASTRUCTURE_SPEC.md  PRODUCT_ARCHITECTURE_SPEC.md  REVIEWS_SPEC.md
legacy-demo/: README.md  script.js
migrations/: 20260629001000_analytics_events.sql  20260629002000_persistent_carts.sql  20260629003000_saved_items.sql  20260629004000_removed_cart_items.sql  20260629005000_reviews.sql
migrations_postgres/: 20260629000000_schema.sql  20260629001000_analytics_events.sql  20260629002000_persistent_carts.sql  20260629003000_saved_items.sql  20260629004000_removed_cart_items.sql  20260629005000_reviews.sql
scratch/: fetch_covers.py
setup/: recovery-email.example.txt  secrets.example.env  setup.toml
src/: app.rs  cart.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  store.rs  templates.rs
src/ui/: mod.rs
templates/: book_detail.html  cart.html  checkout.html  home.html
templates/components/: book_card.html  book_cover.html  card.html  cart.html  cart_page_content.html  catalog_results.html  footer.html  header.html  product_tile.html
templates/layouts/: base.html
xtask/: Cargo.toml
xtask/src/: database.rs  env_loader.rs  main.rs  manifest.rs  providers.rs  report.rs  secrets.rs
(+11 files in other folders)
