[package]
name = "davis-books"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "rust_decimal", "chrono", "migrate"] }
askama = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.34", features = ["serde-float"] }
tower-sessions = { version = "0.12", features = ["memory-store"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
dotenvy = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tower_governor = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
